--- a/Frontend-Statia/src/assets/sass/lbd/_misc.scss
+++ b/Frontend-Statia/src/assets/sass/lbd/_misc.scss
@@ -1,1 +1,95 @@
+/*     General overwrite     */
+
+a {
+  color: $info-color;
+
+  &:hover, &:focus {
+    color: $info-states-color;
+    text-decoration: none;
+  }
+}
+
+a:focus, a:active,
+button::-moz-focus-inner,
+input::-moz-focus-inner,
+select::-moz-focus-inner,
+input[type="file"] > input[type="button"]::-moz-focus-inner {
+  outline: 0 !important;
+}
+
+.ui-slider-handle:focus,
+.navbar-toggle,
+input:focus,
+button:focus {
+  outline: 0 !important;
+}
+
+.navbar.navbar-default {
+  z-index: 2;
+}
+
+/*           Animations              */
+.form-control,
+.input-group-addon,
+.tagsinput,
+.navbar,
+.navbar .alert {
+  @include transition($general-transition-time, $transition-linear);
+}
+
+.sidebar .nav a,
+.table > tbody > tr .td-actions .btn {
+  @include transition($fast-transition-time, $transition-ease-in);
+}
+
+.btn {
+  @include transition($ultra-fast-transition-time, $transition-ease-in);
+}
+
+.fa {
+  width: 21px;
+  text-align: center;
+}
+
+.fa-base {
+  font-size: 1.25em !important;
+}
+
+.margin-top {
+  margin-top: 50px;
+}
+
+.wrapper {
+  position: relative;
+  top: 0;
+  height: 100vh;
+}
+
+@media (min-width: 992px) {
+  .typo-line {
+    padding-left: 140px;
+    margin-bottom: 40px;
+    position: relative;
+  }
+
+  .typo-line .category {
+    transform: translateY(-50%);
+    top: 50%;
+    left: 0px;
+    position: absolute;
+  }
+}
+
+.sidebar .nav > li.active-pro {
+  position: absolute;
+  width: 100%;
+  bottom: 10px;
+}
+
+.sidebar .nav > li.active-pro a {
+  background: rgba(255, 255, 255, 0.14);
+  opacity: 1;
+  color: #FFFFFF;
+}
+
 
